Revision history for Perl extension ViennaNGS.

0.01  Fri Sep 13 12:02:47 2013
	- original version; created by h2xs 1.23 with options
		-XA -n ViennaNGS
	- added get_stranded_subsequence()

0.02  Mon Nov 4 2013
	- added split_bam()
        - added scripts/bam_split.pl

0.03  Tue Nov 5 2013
    	- added bam2bw()
	- updated README

0.04  Tue Nov 26 2013
	- added scripts/DEXSeq_gff2bed.pl
	- updated README

0.05  Thu Apr 03 2014
	- added bed2bw()
	- updated and extended bam_split()
	- updated scripts/bam_split.pl
	- adjusted perl shebang in /scripts

0.06  Fri Sep 19 2014
	- adjusted perl shebang in /scripts
	- added normalize_multicov.pl in /scripts. For that purpose:
	- added computeTPM()
	- added parse_multicov()
	- added write_multicov()
	- added featCount_data() accessor for @featCount AoHoH 
	- added normalization support for bigWigs generated from scripts/bam_split.pl
	- refactored split_bam()
	- intermediate bedGraph files are now removed in bed2bw()

0.07  Mon Sep 29 2014
	- minimum version of Bio::Perl is 1.006924
	- minimum version of Bio::DB::Sam is 1.39
	- added scripts/splice_site_summary.pl
	- added scripts/assembly_hub_constructer.pl prototype
	- added bed2bigBed()
	- use IPC::Cmd for running external tools in bed2bigBed()
	- use Carp for error handling
	- refactored bam2bw()
	- refactored bed2bw()
	- removed scripts/ensembl_fa2bed.pl

0.08  Tue Sep 30 2014
	- added tests for third-party utilities
	- use Carp for error handling throughout the module
	- updated documentation

0.09  Thu Oct 2 2014
	- changed namespace to Bio::ViennaNGS
	- adjusted utilities to use new namespace
	- everything is exported via @EXPORT_OK now
	- updated README

0.10  Thu Nov 27 2014
	- requires Perl >= 5.12.0
	- added sortbed()
	- added uniquify_bam()
	- added scripts/bam_uniq.pl
	- added scripts/sj_visualizer.pl
	- refactored scripts/motiffinda.pl
	- removed development version of scripts/assembly_hub_constructer.pl